[project]
name = "wbexplorer"
version = "0.1.1"
description = "Unofficial Wildberries catalog explorer"
authors = [
    { name = "Maxim Romanyuk", email = "metheoryt@gmail.com" }
]
dependencies = [
    "fake-useragent>=1.5.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wbexplorer"]


# ruff
[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
